<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Application</string>
    <string name="test_connection">Test Connection</string>
    <string name="welcome">WELCOME</string>
    <string name="title_activity_user__login">User_Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up</string>
    <string name="password1" tools:ignore="DuplicateDefinition">Password</string>
    <string name="user_name">User Name</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t Have an Account ?</string>
    <string name="log_in">Log in</string>
    <string name="cell_number">Cell Number</string>
    <string name="id_number">ID Number</string>
    <string name="physical_address">Physical Address</string>
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="sign_up1">SIGN UP</string>
    <string name="already_signed_up">already Signed Up ?</string>
    <string name="radiobutton">RadioButton</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="contact">COntact</string>
    <string name="view_appointments">View Appointments</string>
    <string name="make_appointment">Make Appointment</string>
</resources>