<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/health"
    tools:context=".User_SignUp">

    <RadioButton
        android:id="@+id/rbHome2"
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:text="@string/home"
        app:layout_constraintBottom_toTopOf="@+id/etName"
        app:layout_constraintEnd_toStartOf="@+id/rbAbout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426" />

    <RadioButton
        android:id="@+id/rbAbout3"
        android:layout_width="116dp"
        android:layout_height="40dp"
        android:text="@string/about"
        app:layout_constraintBottom_toTopOf="@+id/etName"
        app:layout_constraintEnd_toStartOf="@+id/rbContact3"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426" />

    <RadioButton
        android:id="@+id/rbContact3"
        android:layout_width="107dp"
        android:layout_height="42dp"
        android:text="@string/contact"
        app:layout_constraintBottom_toTopOf="@+id/etName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432" />

    <EditText
        android:id="@+id/etCellNumber"
        android:layout_width="358dp"
        android:layout_height="64dp"
        android:layout_marginBottom="372dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/cell_number"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etIDNumber"
        android:layout_width="358dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/id_number"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCellNumber"
        app:layout_constraintVertical_bias="0.026" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="357dp"
        android:layout_height="57dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/physical_address"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIDNumber"
        app:layout_constraintVertical_bias="0.038" />

    <EditText
        android:id="@+id/etGender"
        android:layout_width="357dp"
        android:layout_height="54dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/gender"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etCellNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.966" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="354dp"
        android:layout_height="57dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etGender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/etUserPassword"
        android:layout_width="355dp"
        android:layout_height="61dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddress"
        app:layout_constraintVertical_bias="0.046" />

    <Button
        android:id="@+id/btnSignUpUser"
        android:layout_width="233dp"
        android:layout_height="40dp"
        android:text="@string/sign_up1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserPassword"
        app:layout_constraintVertical_bias="0.183" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="154dp"
        android:layout_height="33dp"
        android:text="@string/already_signed_up"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.239"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUpUser"
        app:layout_constraintVertical_bias="0.35" />

    <Button
        android:id="@+id/btnSignUp_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toEndOf="@+id/tvLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUpUser"
        app:layout_constraintVertical_bias="0.178" />

</androidx.constraintlayout.widget.ConstraintLayout>