<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/health"
    tools:context=".PROFILE">

    <Button
        android:id="@+id/btnBack2"
        android:layout_width="83dp"
        android:layout_height="53dp"
        android:text="BACK"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMAppointments"
        app:layout_constraintVertical_bias="0.916" />

    <TextView
        android:id="@+id/tvProfileName"
        android:layout_width="375dp"
        android:layout_height="55dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />

    <RadioButton
        android:id="@+id/rbHome"
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileName"
        app:layout_constraintVertical_bias="0.055" />

    <RadioButton
        android:id="@+id/rbAbout"
        android:layout_width="116dp"
        android:layout_height="40dp"
        android:text="@string/about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toEndOf="@+id/rbHome"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileName"
        app:layout_constraintVertical_bias="0.055" />

    <RadioButton
        android:id="@+id/rbContact"
        android:layout_width="107dp"
        android:layout_height="42dp"
        android:text="@string/contact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toEndOf="@+id/rbAbout"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileName"
        app:layout_constraintVertical_bias="0.055" />

    <Button
        android:id="@+id/btnVAppointments"
        android:layout_width="403dp"
        android:layout_height="65dp"
        android:text="@string/view_appointments"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbHome"
        app:layout_constraintVertical_bias="0.101" />

    <Button
        android:id="@+id/btnMAppointments"
        android:layout_width="401dp"
        android:layout_height="74dp"
        android:text="@string/make_appointment"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVAppointments"
        app:layout_constraintVertical_bias="0.015" />

</androidx.constraintlayout.widget.ConstraintLayout>