<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/health"
    tools:context=".Appointment_Form">

    <RadioButton
        android:id="@+id/radioButton10"
        android:layout_width="176dp"
        android:layout_height="36dp"
        android:text="RadioButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.989"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton8"
        app:layout_constraintVertical_bias="0.027" />

    <RadioButton
        android:id="@+id/radioButton9"
        android:layout_width="176dp"
        android:layout_height="36dp"
        android:text="RadioButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton"
        app:layout_constraintVertical_bias="0.027" />

    <RadioButton
        android:id="@+id/radioButton8"
        android:layout_width="176dp"
        android:layout_height="36dp"
        android:text="RadioButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioButton"
        app:layout_constraintTop_toBottomOf="@+id/tvChooseDepartment"
        app:layout_constraintVertical_bias="0.0" />

    <RadioButton
        android:id="@+id/rbContact4"
        android:layout_width="113dp"
        android:layout_height="39dp"
        android:text="@string/contact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/rbAbout4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <RadioButton
        android:id="@+id/rbAbout4"
        android:layout_width="116dp"
        android:layout_height="40dp"
        android:layout_marginEnd="48dp"
        android:text="@string/about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/rbHome4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033" />

    <RadioButton
        android:id="@+id/rbHome4"
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/tvChooseDepartment"
        android:layout_width="249dp"
        android:layout_height="79dp"
        android:text="Choose Department"
        android:textColor="?attr/actionModeSplitBackground"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbAbout4"
        app:layout_constraintVertical_bias="0.028" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="176dp"
        android:layout_height="36dp"
        android:layout_marginStart="4dp"
        android:text="RadioButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChooseDepartment"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="272dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton9"
        app:layout_constraintVertical_bias="0.033" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="274dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="Cell Number"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="273dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="e-mail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="273dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="dd/mm/yy"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnBookNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Book Now"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate2" />

    <Button
        android:id="@+id/btnBack1"
        android:layout_width="83dp"
        android:layout_height="53dp"
        android:text="BACK"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBookNow"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate2" />

</androidx.constraintlayout.widget.ConstraintLayout>